Revert "about作成中（jqueryで切り替え成功)"
This reverts commit 05945648f8c1ae853b1c1822f8e63f6a30cc51ef.

--- a/css/jquery.simplecolorpicker.css
+++ b/css/jquery.simplecolorpicker.css
@@ -86,8 +86,7 @@
        -moz-border-radius: 3px;
             border-radius: 3px;
 
-    /* mayuge 白が見えないので変更 border: 1px solid transparent;*/
-    border: 1px solid gray;
+    border: 1px solid transparent;
   }
   .simplecolorpicker div {
     margin: 0 4px 4px 0;
