--- a/css/mayuge.css
+++ b/css/mayuge.css
@@ -2,15 +2,15 @@
 	margin-bottom: 5px;
 }
 
-#toolBox .form-horizontal .control-label{
+#toolBox .form-horizontal .control-label, #mayugeTypeBox .form-horizontal .control-label{
 	width: 140px;
 }
 
-#toolBox .form-horizontal .controls{
+#toolBox .form-horizontal .controls, #mayugeTypeBox .form-horizontal .controls{
 	margin-left: 20px;
 }
 
-#toolBox .form-horizontal .controls .inline{
+#toolBox .form-horizontal .controls .inline, #mayugeTypeBox .form-horizontal .controls .inline{
 	white-space: nowrap;
 }
 
