--- a/css/mayuge.css
+++ b/css/mayuge.css
@@ -3,11 +3,20 @@
 }
 
 #toolBox .form-horizontal .control-label, #mayugeTypeBox .form-horizontal .control-label{
-	width: 140px;
+	/*width: 140px;*/
 }
 
-#toolBox .form-horizontal .controls, #mayugeTypeBox .form-horizontal .controls{
+#toolBox .form-horizontal .controls{
 	margin-left: 20px;
+}
+
+#mayugeTypeBox .form-horizontal .controls{
+	margin-left: 0;		
+	margin-right: 30px;	/*全適用ボタンの位置を調整*/
+}
+
+#mayugeTypeBox img{
+	width: 25px;
 }
 
 #toolBox .form-horizontal .controls .inline, #mayugeTypeBox .form-horizontal .controls .inline{
